# university_projects

./: README.md
Sem1/ASC/Labs/lab1/: problema1.asm  tema1p2.asm  tema1p3.asm
Sem1/ASC/Labs/lab11/: mainsiruri.asm  secondsiruri.asm
Sem1/ASC/Labs/lab12/: BorosPatricia.asm  lab12.asm  lab13.asm  lab13.c  main13.c  mainsiruri.asm  practic.asm  secondsiruri.asm
Sem1/ASC/Labs/lab2/: l2p2.asm  problema1.asm
Sem1/ASC/Labs/lab3/: lab3_p2.asm  problema1.asm
Sem1/ASC/Labs/lab5/: lab5_2_.asm  lab5_p1_clasa.asm  lab5_tema.asm  p1.asm
Sem1/ASC/Labs/lab6/: lab6.asm
Sem2/OOP/Labs/lab5/: CMakeLists.txt  MyList.c  MyList.h  customSort.c  customSort.h  farmacie_service.c  farmacie_service.h  main.c  medicament.c  medicament.h
Sem2/OOP/Labs/lab6/: CMakeLists.txt  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  tests.h  ui.cpp  ui.h
Sem2/OOP/Labs/lab7/: CMakeLists.txt  VectorDinamic.h  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  ui.h  validators.h
Sem2/OOP/Labs/lab8-9/: CMakeLists.txt  consola.cpp  cos.cpp  cos.h  domain.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h  teste.cpp  validator.h
Sem2/SDA/Lab/lab1/: App.cpp  CMakeLists.txt  IteratorVectorDinamic.cpp  IteratorVectorDinamic.h  TestExtins.cpp  TestScurt.cpp  VectorDinamic.cpp  VectorDinamic.h
Sem3/Baze de date/labs/: ClinicaPrivata.sql  Cofetarie.sql  LAB_OK.sql
Sem3/PLF/labs/: Lab1_1.pl  Lab2.pl  Lab2.pl~  Lab3.pl  Lab3.pl~  Lab4.lsp  Lab5.lsp  Lab6.lsp  P2.pl  P2.pl~  lab1_1.pl~  practic.lsp  practic1.pl
Sem3/Retele/labs/: PROIECT-FINAL-BUN.pkt
Sem3/Statistica si probabilitati/labs/: Lab1.py  Lab2.py  Lab3.py  Lab4_1.py  Lab4_2.py  Lab6_2.py  ex1.py  ex2.py  main.py  p1.py
Sem4/SGBD/teme/: Lab3.sql  Lab4.sql  Script.sql
Sem4/Web/lab1/: index.html  index2.html
Sem6/CVDL/: Computer_Vision_and_Deep_Learning_Laboratory_1_[Students](1).ipynb  Computer_Vision_and_Deep_Learning_Laboratory_2_pytorch[students](2).ipynb
(+269 files in other folders)
